Terminando el proyecto

--- a/index.html
+++ b/index.html
@@ -147,6 +147,12 @@
             </div>
         </div>
     </main>
+
+    <footer class="footer">
+        <p class="copyright">
+            Front-End Store - Todos los derechos reservados 2019.
+        </p>
+    </footer>
 </body>
 
 </html>
