--- a/nosotros.html
+++ b/nosotros.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +9,43 @@
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    
-</head>
-<body>
 
+</head>
+
+<body>
+    <header class="header">
+        <img src="img/logo.png" alt="logotipo">
+    </header>
+
+    <div class="barra">
+        <nav class="nav">
+            <a href="index.html">Tienda</a>
+            <a href="nosotros.html">Nosotros</a>
+        </nav>
+    </div>
+
+    <main class="contenedor">
+        <h1>Sobre Nosotros</h1>
+        <div class="contenedor-informacion">
+            <div class="texto-nosotros">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis minus nobis, laboriosam consequatur
+                    laborum repellendus ratione distinctio voluptate natus facilis fugiat perferendis debitis recusandae
+                    a cumque, illo labore eveniet sint.Qui consequuntur neque cum at similique assumenda aliquid
+                    inventore vitae dolorum illum porro, a excepturi quidem odio eum architecto maiores! Fugit mollitia
+                    aliquam ad dolor odit et ipsam nostrum recusandae!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium optio impedit est laudantium
+                    aliquid dolores sequi earum tempore ad id, eius reprehenderit mollitia esse consequatur inventore
+                    illum quod necessitatibus</p>
+            </div>
+            <img src="img/nosotros.jpg" alt="imagen nosotros">
+        </div>
+    </main>
+
+    <footer class="footer">
+        <p class="copyright">
+            Front-End Store - Todos los derechos reservados 2019.
+        </p>
+    </footer>
 </body>
+
 </html>
