--- a/producto.html
+++ b/producto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +9,49 @@
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    
-</head>
-<body>
 
+</head>
+
+<body>
+    <header class="header">
+        <img src="img/logo.png" alt="logotipo">
+    </header>
+
+    <div class="barra">
+        <nav class="nav">
+            <a href="index.html">Tienda</a>
+            <a href="nosotros.html">Nosotros</a>
+        </nav>
+    </div>
+
+    <main class="contenedor">
+        <h1>React JS</h1>
+        <div class="contenedor-informacion">
+            <img src="img/3.jpg" alt="imagen producto" class="imagen-producto">
+            <div class="contenido">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis minus nobis, laboriosam consequatur
+                    laborum repellendus ratione distinctio voluptate natus facilis fugiat perferendis debitis recusandae
+                    a cumque, illo labore eveniet sint.Qui consequuntur neque cum at similique assumenda aliquid</p>
+
+                    <form class="formulario-pedido">
+                        <select name="" id="" class="talla campo">
+                            <option value="C">Chica</option>
+                            <option value="M">Mediana</option>
+                            <option value="G">Grande</option>
+                        </select>
+                        <input type="number" min="1" class="cantidad campo">
+                        <input type="submit" value="Agregar al carrito" class="boton">
+                    </form>
+            </div>
+
+        </div>
+    </main>
+
+    <footer class="footer">
+        <p class="copyright">
+            Front-End Store - Todos los derechos reservados 2019.
+        </p>
+    </footer>
 </body>
+
 </html>
